--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@ button:hover{
 .center{
     text-align:center;
 }
+
+#footer {
+    position: fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
+    background:gray;
+    color:white;
+}
